Remove rocky multinode, ovb and undercloud jobs
Rocky is now EOL since [1][2] so It leads to remove
of rocky multinode, ovb and undercloud jobs definations.

Related reviews in topic branch tripleo-ci-reduce-rocky [3].

[1] https://review.opendev.org/c/openstack/releases/+/774244
[2] http://lists.openstack.org/pipermail/openstack-discuss/2021-March/020912.html
[3] https://review.rdoproject.org/r/q/topic:tripleo-ci-reduce-rocky

Change-Id: Ic07232c8653c831b11dadef5b71a046e614eb554

--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -6,7 +6,7 @@
 - job:
     name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001
     parent: tripleo-ci-base-ovb-rdo
-    branches: ^(stable/(newton|ocata|pike|queens|rocky|stein)).*$
+    branches: ^(stable/(newton|ocata|pike|queens|stein)).*$
     vars:
       nodes: 3ctlr_1comp
       featureset: '001'
@@ -24,7 +24,7 @@
 - job:
     name: tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset001
     parent: tripleo-ci-base-ovb-rdo
-    branches: ^(stable/(newton|ocata|pike|queens|rocky|stein|train)).*$
+    branches: ^(stable/(newton|ocata|pike|queens|stein|train)).*$
     vars:
       nodes: 1ctlr_1comp
       featureset: '001'
@@ -64,7 +64,7 @@
 - job:
     name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset035
     parent: tripleo-ci-base-ovb-rdo
-    branches: ^(stable/(newton|ocata|pike|queens|rocky|stein|train)).*$
+    branches: ^(stable/(newton|ocata|pike|queens|stein|train)).*$
     vars:
       nodes: 3ctlr_1comp
       featureset: '035'
@@ -92,16 +92,6 @@
       featureset: '020'
       branch_override: "stable/queens"
 
-- job:
-    name: tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-rocky
-    parent: tripleo-ci-base-ovb-rdo
-    branches: ^master$
-    override-checkout: "stable/rocky"
-    timeout: 18000
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '020'
-      branch_override: "stable/rocky"
 
 - job:
     name: tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-stein
@@ -151,13 +141,6 @@
     override-checkout: "stable/stein"
     vars:
       branch_override: "stable/stein"
-
-- job:
-    name: tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-upload-rocky
-    parent: tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-upload
-    override-checkout: "stable/rocky"
-    vars:
-      branch_override: "stable/rocky"
 
 
 - job:
@@ -246,14 +229,6 @@
       featureset: '001'
       branch_override: "stable/queens"
 
-- job:
-    name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-rocky-branch
-    parent: tripleo-ci-base-ovb-rdo
-    branches: ^master$
-    vars:
-      nodes: 3ctlr_1comp
-      featureset: '001'
-      branch_override: "stable/rocky"
 
 - job:
     name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-stein-branch
@@ -292,7 +267,7 @@
     name: tripleo-ci-centos-7-ovb-3ctlr_1comp_1supp-featureset039
     parent: tripleo-ci-base-ovb-rdo
     timeout: 12600
-    branches: ^(stable/(rocky|stein|train)).*$
+    branches: ^(stable/(stein|train)).*$
     voting: false
     vars:
       nodes: 3ctlr_1comp_1supp
@@ -402,18 +377,6 @@
       branch_override: "stable/queens"
       release: queens
 
-# legacy-periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-rocky
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-rocky
-    parent: tripleo-ci-base-ovb-periodic
-    # Bumping to 5hours for fs1 to run *api* tempest see
-    # https://tree.taiga.io/project/tripleo-ci-board/task/1383
-    timeout: 18000
-    vars:
-      nodes: 3ctlr_1comp
-      featureset: '001'
-      branch_override: "stable/rocky"
-      release: rocky
 
 - job:
     name: periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-stein
@@ -472,15 +435,6 @@
       branch_override: "stable/stein"
       release: stein
 
-# legacy-periodic-tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-rocky-upload
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-rocky-upload
-    parent: tripleo-ci-base-ovb-periodic-upload
-    vars:
-      nodes: 1ctlr_1comp
-      featureset: '002'
-      branch_override: "stable/rocky"
-      release: rocky
 
 # legacy-periodic-tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-queens-upload
 - job:
@@ -512,16 +466,6 @@
       branch_override: "stable/queens"
       release: queens
 
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-rocky
-    parent: tripleo-ci-base-ovb-periodic
-    timeout: 18000
-    override-checkout: "stable/rocky"
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '020'
-      branch_override: "stable/rocky"
-      release: rocky
 
 - job:
     name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-stein
@@ -570,16 +514,6 @@
       branch_override: "stable/stein"
       release: stein
 
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset021-rocky
-    parent: tripleo-ci-base-ovb-periodic
-    timeout: 18000
-    override-checkout: "stable/rocky"
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '021'
-      branch_override: "stable/rocky"
-      release: rocky
 
 - job:
     name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset021-queens
@@ -620,15 +554,6 @@
       branch_override: "stable/stein"
       release: stein
 
-# legacy-periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset035-rocky
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset035-rocky
-    parent: tripleo-ci-base-ovb-periodic
-    vars:
-      nodes: 3ctlr_1comp
-      featureset: '035'
-      branch_override: "stable/rocky"
-      release: rocky
 
 # legacy-periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset035-queens
 - job:
@@ -671,12 +596,6 @@
       branch_override: "stable/stein"
       release: stein
 
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp_1supp-featureset039-rocky
-    parent: periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp_1supp-featureset039-master
-    vars:
-      branch_override: "stable/rocky"
-      release: rocky
 
 - job:
     name: periodic-tripleo-ci-centos-7-ovb-1ctlr_1cellctrl_1comp-featureset063-master
