[DNM] Test undercloud containers with cloudsig repos
Related ML:- http://lists.openstack.org/pipermail/openstack-discuss/2021-April/021706.html
Change-Id: I70a9ea72878714ead61e38f4966255a393b3593c

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,5 @@
 - project:
     check:
       jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+        - cloudsig-ussuri-release-centos-8-undercloud-containers
+        - cloudsig-victoria-release-centos-8-undercloud-containers
