--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,9 @@
 - project:
     check:
       jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+        - periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-train:
+            vars:
+              force_periodic: true
+        - periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-train:
+            vars:
+              force_periodic: true
