--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,7 @@
 - project:
     check:
       jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+        - periodic-tripleo-ci-centos-8-standalone-full-tempest-tempest-wallaby:
+            vars:
+              timeout: 22000
+              force_periodic: true
