--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -367,3 +367,15 @@
       - name: subnodes
         nodes:
           - secondary
+
+- nodeset:
+    name: centos-8-stream
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes: []
