Add dependency jobs for wallaby
This patch adds dependency jobs for wallaby
release.

Change-Id: I4e6cce16a3c98cae83cf68090f60a294e938cbfb

--- a/zuul.d/project-templates-dependencies.yaml
+++ b/zuul.d/project-templates-dependencies.yaml
@@ -28,6 +28,20 @@
               force_periodic: false
 
 
+## wallaby
+#############################################################
+- project-template:
+    name: dependencies-pipeline-wallaby
+    openstack-dependencies-containertools:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-wallaby:
+            dependencies:
+              - periodic-tripleo-ci-centos-8-standalone-wallaby
+        - periodic-tripleo-ci-centos-8-standalone-wallaby:
+            vars:
+              force_periodic: false
+
+
 ## victoria
 #############################################################
 - project-template:
