--- a/zuul.d/ceph-ansible.yaml
+++ b/zuul.d/ceph-ansible.yaml
@@ -63,21 +63,49 @@
     parent: tripleo-centos-8-ceph-integration
     # stein/train/ussuri will be using stable-4.0
     # branches: ^(stable-5.0|master).*$
-    branches: ^(stable-5.0|master).*$
+    branches: ^(stable-6.0|master).*$
     required-projects:
       # without options, the branch of the PR is used for the required-projects
       - name: opendev.org/openstack/tripleo-heat-templates
       - name: github.com/ceph/ceph-ansible
-        override-checkout: stable-5.0
+        override-checkout: stable-6.0
 
 - job:
     name: tripleo-centos-8-ceph-ansible-integration-master
     parent: tripleo-centos-8-ceph-integration
-    branches: ^(stable-5.0|master).*$
+    branches: ^(stable-6.0|master).*$
     required-projects:
       - name: opendev.org/openstack/tripleo-heat-templates
       - name: github.com/ceph/ceph-ansible
-        override-checkout: stable-5.0
+        override-checkout: stable-6.0
+      - name: github.com/ansible/ansible
+        override-checkout: stable-2.9
+    vars:
+      build_ansible_rpm: true
+
+## wallaby Jobs
+- job:
+    name: tripleo-centos-8-ceph-integration-wallaby
+    parent: tripleo-centos-8-ceph-integration
+    branches: ^(stable-6.0|master).*$
+    required-projects:
+      - name: opendev.org/openstack/tripleo-heat-templates
+        override-checkout: stable/wallaby
+      - name: github.com/ceph/ceph-ansible
+        override-checkout: stable-6.0
+    vars:
+      dist: "el8"
+      mock_config: "epel-8-x86_64"
+
+- job:
+    name: tripleo-centos-8-ceph-ansible-integration-wallaby
+    parent: tripleo-centos-8-ceph-integration
+    branches: ^(stable-6.0|master).*$
+    required-projects:
+      - name: opendev.org/openstack/tripleo-heat-templates
+        override-checkout: stable/wallaby
+      - name: github.com/ceph/ceph-ansible
+        override-checkout: stable-6.0
       - name: github.com/ansible/ansible
         override-checkout: stable-2.9
     vars:
@@ -224,11 +252,11 @@
 - job:
     name: tripleo-ceph-ansible-integration-centos-8-scenario001-standalone
     parent: tripleo-ceph-integration-centos-8-scenarios-standalone
-    branches: ^(stable-5.0|master).*$
+    branches: ^(stable-6.0|master).*$
     required-projects:
       - name: opendev.org/openstack/tripleo-heat-templates
       - name: github.com/ceph/ceph-ansible
-        override-checkout: stable-5.0
+        override-checkout: stable-6.0
       - name: github.com/ansible/ansible
         override-checkout: stable-2.9
     vars:
@@ -238,16 +266,80 @@
 - job:
     name: tripleo-ceph-ansible-integration-centos-8-scenario004-standalone
     parent: tripleo-ceph-integration-centos-8-scenarios-standalone
-    branches: ^(stable-5.0|master).*$
+    branches: ^(stable-6.0|master).*$
     required-projects:
       - name: opendev.org/openstack/tripleo-heat-templates
       - name: github.com/ceph/ceph-ansible
-        override-checkout: stable-5.0
+        override-checkout: stable-6.0
       - name: github.com/ansible/ansible
         override-checkout: stable-2.9
     vars:
       release: master
       featureset_override: *scenario004
+
+# jobs for ceph on wallaby
+
+- job:
+    name: tripleo-ceph-integration-centos-8-scenarios-standalone-wallaby
+    parent: tripleo-ci-base-standalone-rdo-centos-8
+    run: playbooks/run-rpm-build.yaml
+    override-checkout: "stable/wallaby"
+    required-projects:
+      - name: github.com/ceph/ceph-ansible
+        override-checkout: stable-6.0
+    vars:
+      release: wallaby
+      branch_override: "stable/wallaby"
+      featureset: '052'
+      standalone_ceph: true
+
+# Scenarios for wallaby
+
+- job:
+    name: tripleo-ceph-integration-centos-8-scenario001-standalone-wallaby
+    parent: tripleo-ceph-integration-centos-8-scenarios-standalone-wallaby
+    branches: ^(stable-6.0|master).*$
+    vars:
+      featureset_override: *scenario001
+
+- job:
+    name: tripleo-ceph-integration-centos-8-scenario004-standalone-wallaby
+    parent: tripleo-ceph-integration-centos-8-scenarios-standalone-wallaby
+    branches: ^(stable-6.0|master).*$
+    vars:
+      featureset_override: *scenario004
+
+# Scenario jobs for ceph ansible on wallaby
+
+- job:
+    name: tripleo-ceph-ansible-integration-centos-8-scenario001-standalone-wallaby
+    parent: tripleo-ceph-integration-centos-8-scenarios-standalone
+    branches: ^(stable-6.0|master).*$
+    override-checkout: "stable/wallaby"
+    required-projects:
+      - name: github.com/ceph/ceph-ansible
+        override-checkout: stable-6.0
+      - name: github.com/ansible/ansible
+        override-checkout: stable-2.9
+    vars:
+      release: wallaby
+      featureset_override: *scenario001
+      branch_override: "stable/wallaby"
+
+- job:
+    name: tripleo-ceph-ansible-integration-centos-8-scenario004-standalone-wallaby
+    parent: tripleo-ceph-integration-centos-8-scenarios-standalone
+    branches: ^(stable-6.0|master).*$
+    override-checkout: "stable/wallaby"
+    required-projects:
+      - name: github.com/ceph/ceph-ansible
+        override-checkout: stable-6.0
+      - name: github.com/ansible/ansible
+        override-checkout: stable-2.9
+    vars:
+      release: wallaby
+      featureset_override: *scenario004
+      branch_override: "stable/wallaby"
 
 # jobs for ceph on victoria
 - job:
@@ -541,7 +633,7 @@
       standalone_ceph: true
       branch_override: "stable/victoria"
 
-# Periodic version for ussuri
+# Periodic version for victoria
 
 - job:
     name: periodic-tripleo-ceph-integration-centos-8-scenario001-standalone-victoria
@@ -587,6 +679,77 @@
     parent: periodic-tripleo-ceph-ansible-integration-centos-8-scenarios-standalone-victoria
     vars:
       release: victoria
+      featureset_override: *scenario004
+
+
+# CentOS 8 Periodic jobs for wallaby
+
+- job:
+    name: periodic-tripleo-centos-8-ceph-integration-wallaby
+    parent: tripleo-centos-8-ceph-integration-wallaby
+
+# CentOS 8 Base periodic job for wallaby
+
+- job:
+    name: periodic-tripleo-ceph-integration-centos-8-scenarios-standalone-wallaby
+    parent: tripleo-ci-base-standalone-periodic-centos-8
+    abstract: true
+    run: playbooks/run-rpm-build.yaml
+    override-checkout: "stable/wallaby"
+    required-projects:
+      - name: github.com/ceph/ceph-ansible
+        override-checkout: stable-6.0
+    vars:
+      featureset: '052'
+      standalone_ceph: true
+      branch_override: "stable/wallaby"
+
+# Periodic version for wallaby
+
+- job:
+    name: periodic-tripleo-ceph-integration-centos-8-scenario001-standalone-wallaby
+    parent: periodic-tripleo-ceph-integration-centos-8-scenarios-standalone-wallaby
+    vars:
+      release: wallaby
+      featureset_override: *scenario001
+
+- job:
+    name: periodic-tripleo-ceph-integration-centos-8-scenario004-standalone-wallaby
+    parent: periodic-tripleo-ceph-integration-centos-8-scenarios-standalone-wallaby
+    vars:
+      release: wallaby
+      featureset_override: *scenario004
+
+# Periodic version of ceph-ansible Centos-8 wallaby jobs
+
+- job:
+    name: periodic-tripleo-ceph-ansible-integration-centos-8-scenarios-standalone-wallaby
+    parent: tripleo-ci-base-standalone-periodic-centos-8
+    abstract: true
+    override-checkout: "stable/wallaby"
+    required-projects:
+      - name: github.com/ceph/ceph-ansible
+        override-checkout: stable-6.0
+      - name: github.com/ansible/ansible
+        override-checkout: stable-2.9
+    vars:
+      featureset: '052'
+      standalone_ceph: true
+      build_ansible_rpm: true
+      branch_override: "stable/wallaby"
+
+- job:
+    name: periodic-tripleo-ceph-ansible-integration-centos-8-scenario001-standalone-wallaby
+    parent: periodic-tripleo-ceph-ansible-integration-centos-8-scenarios-standalone-wallaby
+    vars:
+      release: wallaby
+      featureset_override: *scenario001
+
+- job:
+    name: periodic-tripleo-ceph-ansible-integration-centos-8-scenario004-standalone-wallaby
+    parent: periodic-tripleo-ceph-ansible-integration-centos-8-scenarios-standalone-wallaby
+    vars:
+      release: wallaby
       featureset_override: *scenario004
 
 # CentOS 8 Periodic jobs for ussuri
