--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -65,6 +65,26 @@
             files: *ceph
             dependencies:
               - tripleo-centos-8-ceph-ansible-integration-victoria
+        - tripleo-centos-8-ceph-integration-wallaby:
+            files: *ceph
+        - tripleo-centos-8-ceph-ansible-integration-wallaby:
+            files: *ceph
+        - tripleo-ceph-integration-centos-8-scenario001-standalone-wallaby:
+            files: *ceph
+            dependencies:
+              - tripleo-centos-8-ceph-integration-wallaby
+        - tripleo-ceph-integration-centos-8-scenario004-standalone-wallaby:
+            files: *ceph
+            dependencies:
+              - tripleo-centos-8-ceph-integration-wallaby
+        - tripleo-ceph-ansible-integration-centos-8-scenario001-standalone-wallaby:
+            files: *ceph
+            dependencies:
+              - tripleo-centos-8-ceph-ansible-integration-wallaby
+        - tripleo-ceph-ansible-integration-centos-8-scenario004-standalone-wallaby:
+            files: *ceph
+            dependencies:
+              - tripleo-centos-8-ceph-ansible-integration-wallaby
         - tripleo-centos-8-ceph-integration-ussuri:
             files: *ceph
         - tripleo-centos-8-ceph-ansible-integration-ussuri:
