--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -504,6 +504,13 @@
         - validate-buildsys-tags-wallaby-release-packstack-scenario001-centos8-stream
         - validate-buildsys-tags-wallaby-release-packstack-scenario002-centos8-stream
         - validate-buildsys-tags-wallaby-release-packstack-scenario003-centos8-stream
+        - validate-buildsys-tags-xena-testing-puppet-scenario001-centos8
+        - validate-buildsys-tags-xena-testing-puppet-scenario002-centos8
+        - validate-buildsys-tags-xena-testing-puppet-scenario003-centos8
+        - validate-buildsys-tags-xena-testing-puppet-scenario004-centos8
+        - validate-buildsys-tags-xena-testing-packstack-scenario001-centos8
+        - validate-buildsys-tags-xena-testing-packstack-scenario002-centos8
+        - validate-buildsys-tags-xena-testing-packstack-scenario003-centos8
 
 - project-template:
     name: periodic-centos-stream
