--- a/zuul.d/cloudsig-jobs.yaml
+++ b/zuul.d/cloudsig-jobs.yaml
@@ -39,3 +39,49 @@
       - opendev.org/openstack/requirements
       - opendev.org/openstack/tripleo-ansible
       - opendev.org/openstack/tripleo-common
+
+- job:
+    name: cloudsig-wallaby-release-centos-8-scenario001-standalone
+    parent: cloudsig-victoria-release-centos-8-scenario001-standalone
+    override-checkout: "stable/wallaby"
+    vars:
+      force_non_periodic: true
+      featureset: '052'
+      release: wallaby
+      standalone_ceph: true
+      branch_override: "cloudsig/wallaby"
+      add_repos:
+        - type: generic
+          reponame: delorean-current-tripleo
+          filename: delorean-current-tripleo.repo
+          baseurl: "https://trunk.rdoproject.org/centos8-wallaby/component/tripleo/current-tripleo/"
+        - type: generic
+          reponame: delorean-current-tripleo-validation
+          filename: delorean-current-tripleo-validation.repo
+          baseurl: "https://trunk.rdoproject.org/centos8-wallaby/component/validation/current-tripleo/"
+        - type: generic
+          reponame: delorean-current-tripleo-baremetal
+          filename: delorean-current-tripleo-baremetal.repo
+          baseurl: "https://trunk.rdoproject.org/centos8-wallaby/component/baremetal/current-tripleo/"
+          includepkgs:
+            - python3-metalsmith
+            - ansible-role-metalsmith-deployment
+        - type: generic
+          reponame: delorean-current-tripleo-security
+          filename: delorean-current-tripleo-security.repo
+          baseurl: "https://trunk.rdoproject.org/centos8-wallaby/component/security/current-tripleo/"
+          includepkgs:
+            - ansible-tripleo-ipa
+        - type: generic
+          reponame: delorean-current-tripleo-clients
+          filename: delorean-current-tripleo-clients.repo
+          baseurl: "https://trunk.rdoproject.org/centos8-wallaby/component/clients/current-tripleo/"
+          includepkgs:
+            - ansible-collections-openstack
+        - type: generic
+          reponame: delorean-current-tripleo-network
+          filename: delorean-current-tripleo-network.repo
+          baseurl: "https://trunk.rdoproject.org/centos8-wallaby/component/network/current-tripleo/"
+          includepkgs:
+            - python3-networking-vmware-nsx
+            - python3-vmware-nsxlib
