[DNM] Test cloudsig wallaby oooq scenario001
Change-Id: Idd41d4d6a16cd468b8da96f55a729a560e2694e7

--- a/zuul.d/cloudsig-jobs.yaml
+++ b/zuul.d/cloudsig-jobs.yaml
@@ -39,3 +39,19 @@
       - opendev.org/openstack/requirements
       - opendev.org/openstack/tripleo-ansible
       - opendev.org/openstack/tripleo-common
+
+- job:
+    name: cloudsig-wallaby-release-centos-8-scenario001-standalone
+    parent: cloudsig-victoria-release-centos-8-scenario001-standalone
+    override-checkout: "stable/wallaby"
+    vars:
+      force_non_periodic: true
+      featureset: '052'
+      release: wallaby
+      standalone_ceph: true
+      branch_override: "cloudsig/wallaby"
+      add_repos:
+        - type: generic
+          reponame: delorean-current-tripleo
+          filename: delorean-current-tripleo.repo
+          baseurl: "https://trunk.rdoproject.org/centos8-wallaby/component/tripleo/current-tripleo/"
