Add fake ubuntu-focal nodeset
Needed to resolve puppet jobs
from openstack-puppet-integration repo.

Change-Id: Ibeef0036d704e3ff0c045f8292a2211b24da580c

--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -379,3 +379,52 @@
           - primary
       - name: peers
         nodes: []
+
+# Fake nodesets to resolve puppet jobs
+- nodeset:
+    name: ubuntu-focal
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes: []
+
+- nodeset:
+    name: ubuntu-bionic
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes: []
+
+- nodeset:
+    name: ubuntu-xenial
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes: []
+
+- nodeset:
+    name: debian-stable
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes: []
