--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -379,3 +379,16 @@
           - primary
       - name: peers
         nodes: []
+
+# Fake nodesets to resolve puppet jobs
+- nodeset:
+    name: ubuntu-focal
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes: []
