Add p-o-i dependency jobs
Centos-9-stream jobs to be added as they
become available.

Change-Id: I4dd824d7aafd5dd245ce18926339c23e6713f68f

--- a/zuul.d/project-templates-dependencies.yaml
+++ b/zuul.d/project-templates-dependencies.yaml
@@ -27,6 +27,15 @@
             vars:
               force_periodic: false
 
+    puppet-openstack-integration:
+      jobs:
+        - puppet-openstack-integration-6-scenario000-tempest-centos-8-stream
+        - puppet-openstack-integration-6-scenario001-tempest-centos-8-stream
+        - puppet-openstack-integration-6-scenario002-tempest-centos-8-stream
+        - puppet-openstack-integration-6-scenario003-tempest-centos-8-stream
+        - puppet-openstack-integration-6-scenario003-tempest-centos-8-stream
+        - puppet-openstack-integration-6-scenario004-tempest-centos-8-stream
+
 
 ## wallaby
 #############################################################
