--- a/zuul.d/rdoinfo-templates.yaml
+++ b/zuul.d/rdoinfo-templates.yaml
@@ -107,3 +107,34 @@
             files:
               - ^buildsys-tags/cloud8-openstack-victoria-testing.yml$
             voting: false
+
+- project-template:
+    name: rdoinfo-wallaby-testing-tripleo-jobs
+    check:
+      jobs:
+        - rdoinfo-tripleo-wallaby-testing-centos-8-standalone:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8-openstack-wallaby-testing.yml$
+        - rdoinfo-tripleo-wallaby-testing-centos-8-scenario001-standalone:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8-openstack-wallaby-testing.yml$
+        - rdoinfo-tripleo-wallaby-testing-centos-8-containers-multinode:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8-openstack-wallaby-testing.yml$
+    experimental:
+      jobs:
+        - rdoinfo-tripleo-wallaby-testing-centos-8-scenario007-standalone:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8-openstack-wallaby-testing.yml$
